/***********************************************************************
X3 ChangeLog

2007-02-12  Alex Schumann  <rubin@afternet.org>

	* src/tools.c: adding ircd_strtolower() func

	* src/common.h: adding ircd_strtolower() func

	* src/nickserv.c: force accounts to lowercase at all inputs

2007-02-11  Alex Schumann  <rubin@afternet.org>

	* src/nickserv.c: fixed a bunch of ldap result value check bugs

2007-02-11  Alex Schumann  <rubin@afternet.org>

	* src/opserv.c: Added oper group support to ldap

	* src/x3ldap.c: Added group support to ldap. Fixed set email bug

	* src/x3ldap.h: Added group support to ldap. 

	* src/nickserv.c: Added group support to ldap

	* src/nickserv.h: Added group support to ldap

2007-02-11  Neil Spierling  <sirvulcan@gmail.com>

	* tools/ldap/ldap_convert.php: Fixes after more testing.

2007-02-09  Alex Schumann  <rubin@afternet.org>

        * src/x3ldap.c: addid search function to get users email address from
	ldap

	* src/x3ldap.h: func defs for search

	* src/nicserv.c: update local copy of email address when they log
	in via ldap. fix memory leak.

2007-02-08  Alex Schumann  <rubin@afternet.org>

        * src/x3ldap.c: cleaning up and switching adduser to use the new
	crypted password scheme.

        * src/nickserv.c: testing with ldap_enabled set to 0, and/or WITH_LDAP
	not defined, uncovered some warnings etc.

2007-02-08  Alex Schumann  <rubin@afternet.org>

        * src/nickserv.c: Filling in ldap support for all password related
	operations: cmd_pass, loc_auth, etc.

2007-02-09  Neil Spierling  <sirvulcan@gmail.com>

	* tools/ldap/ldap_convert.php: Few tweaks.

2007-02-08  Alex Schumann  <rubin@afternet.org>

	* tools/ldap/inetorganon.schema: Scheme for ldap.

	* tools/ldap/ldap_convert.php: Conversion script for converting
	x3 users to the ldap server.

2007-02-07  Alex Schumann  <rubin@afternet.org>

	* configure.in: adding compile/configure support for ssl libs (not
	        yet needed)
